--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background: linear-gradient(to left, lightblue, lightgreen);
+  background: linear-gradient(to left, lightblue, lightgreen,white);
   font-family: "Courier New", Courier, monospace;
 }
 
